--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
     <!-- LUGAR -->
     
-    <div class="card border-light card-border-radius-0 p-0 mb-4 my-4">
+    <div id="lugar" class="card border-light card-border-radius-0 p-0 mb-4 my-4">
       <div class="row g-0">
         <div class="col-md-6">
           <img src="imagenes/honolulu.jpg" class="img-fluid rounded-float-start px-0" alt="...">
