--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
             <img src="imagenes/ada.jpeg" class="card-img-top" alt="ada">
             <div class="card-body">
               <div class="d-flex">
-                <span class="badge text-bg-warning">JavaScript</span>
-                <span class="badge text-bg-info text-white mx-1">React</span>
+                <span class="badge text-bg-secondary">Negocios</span>
+                <span class="badge text-bg-danger text-white mx-1">Startups</span>
               </div>
               <h5 class="card-title">Ada Lovelace</h5>
               <p class="card-text textocard">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo corporis officia atque iusto eligendi quibusdam. Amet possimus, sapiente repellat atque, obcaecati illo aperiam accusamus exercitationem inventore, ad quis? Voluptatibus, magni!</p>
