--- a/index.html
+++ b/index.html
@@ -34,28 +34,37 @@
         </div>
 
     <!-- OPCIONES DE MENU -->
-        <div class="col-8">
-            <nav class="navbar navbar-expand-lg bg-dark " data-bs-theme="dark">
+     <div class="col-8  ">
+      <nav class="navbar navbar-expand-md bg-dark  " data-bs-theme="dark">
+        <div class="container-fluid ">
+          <a class="navbar-brand" href="#"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">La Conferencia</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#oradores">Los Oradores</a>
+              </li>
 
-                <div class="container-fluid">
-                  
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav ">
-                      <a class="nav-link active " aria-current="page" href="#">La conferencia</a>
-                      <a class="nav-link" href="#oradores">Los oradores</a>
-                      <a class="nav-link" href="#lugar">El lugar y la fecha</a>
-                      <a class="nav-link" href="#convertite">Conviertete en orador</a>
-                      <a class="nav-link text-success" href="#comprar">Comprar Tickets</a>
-                    </div>
-                  </div>
-                </div>
-              </nav>
-
+              <li class="nav-item">
+                <a class="nav-link " href="#lugar" >El lugar y la fecha</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="#convertite">Conviertete en orador</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-success " href="#comprar">Comprar Tickets</a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </nav>      
     </div>
+  </div>
 
     <!-- CARRUSEL -->
 
